--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,14 +3,26 @@
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_gallery">Gallery Activity</string>
-    <string name="title_activity_menu">MenuActivity</string>
+    <string name="title_activity_menu" translatable="false">MenuActivity</string>
     <string name="title_activity_settings">Settings</string>
 
-    <string name="pref_lang_key">pref_lang</string>
+    <string name="pref_lang_key" translatable="false">pref_lang</string>
     <string name="pref_lang_title">Language</string>
-    <string name="pref_lang_default">eng</string>
+    <string name="pref_lang_default" translatable="false">eng</string>
 
-    <string name="current_language_text">Current Language:\n</string>
-    <string name="picture_text">Text in Picture:</string>
-    <string name="translation_text">Translation:</string>
+    <string name="text_view_current_language">Language:\n</string>
+    <string name="text_view_picture_text_title">Text in Picture:</string>
+    <string name="text_view_translation_title">Translation:</string>
+
+    <string name="english_value">English</string>
+    <string name="hebrew__value">Hebrew</string>
+    <string name="arabic_value">Arabic</string>
+
+    <string name="message_opening">Welcome to OCR App,\nOpen Gallery or Camera to select an image</string>
+    <string name="message_permissions_denied">This application can\'t run without permissions to the external storage.\nIf you marked \"Never ask again\" at the permissions dialog you should reinstall the שpplication to grant permissions.\nPress OK to exit the application.</string>
+    <string name="permissions_denied_title">Permission Denied</string>
+    <string name="message_process_image">Processing image to get text...</string>
+    <string name="message_still_process_image">Still processing image... Please wait for process to finish before changing image</string>
+    <string name="message_translation_not_supported">Translition is available only for arabic language.</string>
+    <string name="message_translation_not_found">No translation found.</string>
 </resources>
