--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">OCR App</string>
     <string name="action_settings">Settings</string>
 
     <string name="title_activity_gallery">Gallery Activity</string>
@@ -25,4 +24,6 @@
     <string name="message_still_process_image">Still processing image... Please wait for process to finish before changing image</string>
     <string name="message_translation_not_supported">Translition is available only for arabic language.</string>
     <string name="message_translation_not_found">No translation found.</string>
+    <string name="Refresh">Refresh</string>
+    <string name="app_name">Oper. Translator</string>
 </resources>
